--- a/web/src/components/View/View.css
+++ b/web/src/components/View/View.css
@@ -36,7 +36,7 @@
 
 @media only screen and (max-width: 600px) {
     .view-container--inner {
-        margin-top: 105px;
+        padding-top: 105px;
     }
 }
 
